--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "dependencies": {
-    "ethers": "^5.5.4",
+    "@openzeppelin/contracts": "^4.5.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3"
   },
-  "console": "integratedTerminal"
+  "console": "integratedTerminal",
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+    "ethers": "^5.6.0",
+    "hardhat": "^2.9.1",
+    "hardhat-deploy": "^0.11.0"
+  }
 }
